summative.moria.Moria.scala.error
Compilation error:
Moria:20: error: ';' expected but 'while' found.
  }while(!estSurBiscuit)
   ^Moria:25: error: 'while' expected but '}' found.
}
^